--- a/web/views/includes/util/feature-product.ejs
+++ b/web/views/includes/util/feature-product.ejs
@@ -1,17 +1,17 @@
 <div class="max-width product-feature">
-  <h2 class="product-feature__title"><%= title %></h2>
+  <h2 class="product-feature__title"><%= products[0].NAMETYPE %> (HÀNG MỚI CẬP NHẬT THÊM TẠI SHOP)</h2>
   <ul class="product-feature__container">
     <%if(products && products.length > 0) {%> <%
     products.forEach(function(product) { %>
     <li class="product-feature__content col-sm-3">
-      <img src="/<%= product.imageURL %>" class="product-feature__img" />
+      <img src="<%= product.IMAGE_URL %>" class="product-feature__img" />
 
       <div class="product-feature__title-price">
         <div class="product-feature__title-product">
-          <h2><%= product.title%></h2>
+          <h2><%= product.TITLE%></h2>
         </div>
         <div class="product-feature__price-product">
-          <span>Giá: <%= product.price%>đ</span>
+          <span>Giá: <%= formatCurrency(product.PRICE) %> VND</span>
         </div>
       </div>
       <div class="product-feature__form">
