--- a/web/views/includes/header/header-top.ejs
+++ b/web/views/includes/header/header-top.ejs
@@ -37,7 +37,7 @@
             <div class="nav-content-user">
               <ul class="list-task-user">
                 <li><a href="/order">Đơn hàng</a></li>
-                <li><a href="/auth/change-password">Đổi mật khẩu</a></li>
+                <li><a href="/auth/information">Thông tin cá nhân</a></li>
                 <li>
                   <form action="/auth/logout" method="post">
                     <button type="submit">Đăng xuất</button>
