--- a/web/public/css/shop/home.css
+++ b/web/public/css/shop/home.css
@@ -75,7 +75,9 @@
 }
 
 .product-feature__form {
-  margin: 1.2rem 0.4rem;
+  width: 100%;
+  padding: 0 0.4rem;
+  margin: 1.2rem 0;
   display: flex;
   justify-content: space-between;
   position: absolute;
