--- a/web/views/auth/change-password.ejs
+++ b/web/views/auth/change-password.ejs
@@ -1,12 +1,15 @@
 <%- include('../includes/util/head.ejs') %>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/global.css">
 <link rel="stylesheet" href="/css/header-footer/header.css">
 <link rel="stylesheet" href="/css/header-footer/footer.css">
 <link rel="stylesheet" href="/css/auth/auth.css">
 <link rel="stylesheet" href="/css/header-footer/nav-user.css">
-<link href="node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
+<link rel="stylesheet" href="/css/auth/auth-info.css">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="/js/api.js" defer></script>
 
 </head>
 <body>
@@ -14,57 +17,135 @@
         <%- include('../includes/header/header.ejs') %>
 
         <div class="auth max-width">
-            <div class="auth__container">
-              <div class="auth__content">
-                <h2>Thay đổi mật khẩu</h2>
-              </div>
-              <div class="auth__container-form">
-                <form class="auth__form-auth" method="post" action="/auth/change-password">
-                  <% if(errorMessage) {%>
-                    <div class="error-auth">
-                        
-                        <h5><svg viewBox="0 0 16 16" class="fJb11i">
-                          <path fill="none" stroke="#FF424F" d="M8 15A7 7 0 108 1a7 7 0 000 14z" clip-rule="evenodd"></path>
-                          <rect stroke="none" width="7" height="1.5" x="6.061" y="5" fill="#FF424F" rx=".75" transform="rotate(45 6.06 5)"></rect>
-                          <rect stroke="none" width="7" height="1.5" fill="#FF424F" rx=".75" transform="scale(-1 1) rotate(45 -11.01 -9.51)"></rect>
-                      </svg><%= errorMessage %></h5>
+            <div class="auth_information">
+              <div class="auth_info">
+                <div class="auth__content">
+                  <h2>Thông tin cá nhân</h2>
+                </div>
+                <div class="detail-info">
+                  <ul class="detail-info-list">
+                    <li class="nameUser">Họ và tên: <%= userInfo.NAME %></li>
+                    <li>Email: <%= userInfo.EMAIL %></li>
+                    <li class="phoneUser">Số điện thoại: <%= userInfo.PHONE %></li>
+                    <li class="phoneUser">Địa chỉ giao hàng: <%= userInfo.ADDRESS %></li>
+                  </ul>
+                  <div class="action-auth-info">
+                    <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Thay đổi thông tin</button>
+                  </div>
+                  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Thay đổi thông tin</h5>
+                          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <form class="auth__form-auth" action="/auth/change-information" method="post">
+                              <div id="error-auth-info-div">
+                                  <h5 id="error-auth-h5">Server đang gặp lỗi. Xin vui lòng thử lại sau</h5>
+                                </div>
+                            <div class="auth__form-control">
+                              <label for="name">Họ tên</label>
+                              <input
+                                id="name"
+                                name="name"
+                                placeholder="Nhập họ tên"
+                                class="auth__search <%= validationErrors.find(err => err.path === 'name') ? 'invalid' : '' %>"
+                                value="<%= userInfo.NAME %>"
+                              />
+                            </div>
+                            <div class="auth__form-control">
+                              <label for="phone">Số điện thoại</label>
+                              <input
+                                id="phone"
+                                name="phone"
+                                placeholder="Nhập số điện thoại"
+                                class="auth__search <%= validationErrors.find(err => err.path === 'phone') ? 'invalid' : '' %>"
+                                value="<%= userInfo.PHONE %>"
+                              />
+                            </div>
+                            <div class="auth__form-control">
+                              <label for="phone">Địa chỉ giao hàng</label>
+                              <input
+                                id="address"
+                                name="address"
+                                placeholder="Nhập địa chỉ"
+                                class="auth__search <%= validationErrors.find(err => err.path === 'address') ? 'invalid' : '' %>"
+                                value="<%= userInfo.ADDRESS %>"
+                              />
+                            </div>
+                            <input
+                              id="userId"
+                              name="userId"
+                              value="<%= userInfo.USER_ID %>"
+                              hidden
+                            />
+                            <div class="auth-btn">
+                              <button type="button" onclick="changeInfo(this)">Lưu thay đổi</button>
+                            </div>
+                          </form>
+                        </div>
+                       
                       </div>
-                    <% } %>
-                  <div class="auth__form-control">
-                    <label for="oldPassword">Mật khẩu hiện tại</label>
-                    <input
-                        id="oldPassword"
-                        name="oldPassword"
-                        placeholder="Nhập mật khẩu hiện tại"
-                        class="auth__search <%= validationErrors.find(err => err.path === 'oldPassword') ? 'invalid' : '' %>"
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="auth__container">
+                <div class="auth__content">
+                  <h2>Thay đổi mật khẩu</h2>
+                </div>
+                <div class="auth__container-form">
+                  <form class="auth__form-auth" method="post" action="/auth/change-password">
+                    <% if(errorMessage) {%>
+                      <div class="error-auth">
+                          
+                          <h5><svg viewBox="0 0 16 16" class="fJb11i">
+                            <path fill="none" stroke="#FF424F" d="M8 15A7 7 0 108 1a7 7 0 000 14z" clip-rule="evenodd"></path>
+                            <rect stroke="none" width="7" height="1.5" x="6.061" y="5" fill="#FF424F" rx=".75" transform="rotate(45 6.06 5)"></rect>
+                            <rect stroke="none" width="7" height="1.5" fill="#FF424F" rx=".75" transform="scale(-1 1) rotate(45 -11.01 -9.51)"></rect>
+                        </svg><%= errorMessage %></h5>
+                        </div>
+                      <% } %>
+                    <div class="auth__form-control">
+                      <label for="oldPassword">Mật khẩu hiện tại</label>
+                      <input
+                          id="oldPassword"
+                          name="oldPassword"
+                          placeholder="Nhập mật khẩu hiện tại"
+                          class="auth__search <%= validationErrors.find(err => err.path === 'oldPassword') ? 'invalid' : '' %>"
+                          type="password"
+                          value="<%= oldInput.oldPassword %>"
+                      />
+                    </div>
+                    <div class="auth__form-control">
+                      <label for="newPassword">Mật khẩu mới</label>
+                      <input
+                        id="newPassword"
+                        name="newPassword"
+                        placeholder="Nhập mật khẩu mới"
+                        class="auth__search <%= validationErrors.find(err => err.path === 'newPassword') ? 'invalid' : '' %>"
                         type="password"
-                        value="<%= oldInput.oldPassword %>"
-                    />
-                  </div>
-                  <div class="auth__form-control">
-                    <label for="newPassword">Mật khẩu mới</label>
-                    <input
-                      id="newPassword"
-                      name="newPassword"
-                      placeholder="Nhập mật khẩu mới"
-                      class="auth__search <%= validationErrors.find(err => err.path === 'newPassword') ? 'invalid' : '' %>"
-                      type="password"
-                      value="<%= oldInput.newPassword %>"
-                    />
-                  </div>
-                  <div class="auth__form-control">
-                    <label for="newConfirmPassword">Nhập lại mật khẩu mới</label>
-                    <input
-                      id="newConfirmPassword"
-                      name="newConfirmPassword"
-                      placeholder="Nhập lại mật khẩu mới"
-                      class="auth__search <%= validationErrors.find(err => err.path === 'newConfirmPassword') || validationErrors.find(err => err.path === 'newPassword') ? 'invalid' : '' %>"
-                      type="password"
-                      value="<%= oldInput.newConfirmPassword %>"
-                    />
-                  </div>
-                  <button class="auth__btn-auth">LƯU THAY ĐỔI</button>
-                </form>
+                        value="<%= oldInput.newPassword %>"
+                      />
+                    </div>
+                    <div class="auth__form-control">
+                      <label for="newConfirmPassword">Nhập lại mật khẩu mới</label>
+                      <input
+                        id="newConfirmPassword"
+                        name="newConfirmPassword"
+                        placeholder="Nhập lại mật khẩu mới"
+                        class="auth__search <%= validationErrors.find(err => err.path === 'newConfirmPassword') || validationErrors.find(err => err.path === 'newPassword') ? 'invalid' : '' %>"
+                        type="password"
+                        value="<%= oldInput.newConfirmPassword %>"
+                      />
+                    </div>
+                    <button class="auth__btn-auth">LƯU THAY ĐỔI</button>
+                  </form>
+                </div>
               </div>
             </div>
         </div>
