--- a/web/views/shop/products/cart.ejs
+++ b/web/views/shop/products/cart.ejs
@@ -7,10 +7,6 @@
 <link rel="stylesheet" href="/css/shop/cart.css">
 <link href="node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-<<<<<<< HEAD
-=======
-
->>>>>>> defa6b5922f103a29d7dccbb763dec8209e5f197
 </head>
 <body>
     <main>
@@ -85,42 +81,39 @@
                         </div>
                     </ul>
                 </div>
-                <div class="cart__container-checkout">
-                    <h3 class="checkout__title">Thông tin đơn hàng</h3>
-                    <div class="checkout__info-order">
-                      <div class="checkout__quantity-product">
-                        <p class="checkout__provisional">Tạm tính(<%= quantity %> sản phẩm)</p>
-                        <p class="checkout__sum-price"><%= price %> VND</p>
-                      </div>
-                      <div class="checkout__fee">
-                        <p>Phí vận chuyển</p>
-                        <p class="checkout__fee-transport"><%=count %> VND</p>
-                      </div>
+                <div class="div-right">
+                    <div class="cart__container-checkout">
+                        <h3 class="checkout__title">Thông tin đơn hàng</h3>
+                        <div class="checkout__info-order">
+                          <div class="checkout__quantity-product">
+                            <p class="checkout__provisional">Tạm tính(<%= quantity %> sản phẩm)</p>
+                            <p class="checkout__sum-price"><%= price %> VND</p>
+                          </div>
+                          <div class="checkout__fee">
+                            <p>Phí vận chuyển</p>
+                            <p class="checkout__fee-transport"><%= fee %> VND</p>
+                          </div>
+                        </div>
+                        <div class="checkout__confirm">
+                          <div class="checkout__total">
+                            <span>Tổng cộng</span>
+                            <p class="checkout__total-sum-price"><%= total %> VND</p>
+                          </div>
+                          
+                        </div>
                     </div>
-                    <div class="checkout__confirm">
-                      <div class="checkout__total">
-                        <span>Tổng cộng</span>
-                        <p class="checkout__total-sum-price"><%= price + count %> VND</p>
-                      </div>
-<<<<<<< HEAD
-                      <div >
-                        <button onclick="Checkout(this)">XÁC NHẬN GIỎ HÀNG</button>
-                      </div>
-=======
-                      <form action="/create-checkout-session" method="post">
-                        <button onclick="Checkout(this)">XÁC NHẬN GIỎ HÀNG</button>
-                      </form>
->>>>>>> defa6b5922f103a29d7dccbb763dec8209e5f197
+                    <div class="payment-method">
+                        <div >
+                            <button onclick="Checkout(this)">Thanh toán với Visa</button>
+                          </div>
+                          <div >
+                            <button onclick="CheckoutMoMo()">Thanh toán với MoMo</button>
+                          </div>
                     </div>
-                  </div>
-            </div>
-        
+                </div>
+            </div>    
         </div>
         <%- include('../../includes/footer/footer.ejs') %>
     </main>
 <%- include('../../includes/util/end.ejs') %>
-<<<<<<< HEAD
 <script src="/js/api.js"></script>
-=======
-<script src="/js/api.js"></script>
->>>>>>> defa6b5922f103a29d7dccbb763dec8209e5f197
